# riot.gol.2

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchGTest.cmake
src/: CMakeLists.txt
src/exe/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Cell.h  CellStorage.cpp  CellStorage.h  GOLGrid.cpp  GOLGrid.h
src/test/: CMakeLists.txt  test_main.cpp
